--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -14,14 +14,14 @@
     <main>
       <div class="grid">
         <!-- turn indicator -->
-        <div class="turn">
-          <i class="fa-solid fa-x turquoise"></i>
-          <p class="turquoise">Player 1, you're up!</p>
+        <div class="turn yellow" data-id="turn">
+          <i class="fa-solid fa-x"></i>
+          <p>Player 1, you're up!</p>
         </div>
 
         <!-- dropdown menu -->
         <div class="menu" data-id="menu">
-          <button class="menu-btn">
+          <button class="menu-btn" data-id="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
           </button>
@@ -83,6 +83,6 @@
       </div>
     </div>
 
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
