--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <main>
-      <div class="grid">
+      <div class="grid" data-id="grid">
         <!-- turn indicator -->
         <div class="turn" data-id="turn">
           <i class="fa-solid fa-x turquoise"></i>
@@ -51,7 +51,7 @@
         </div>
         <div class="score shadow" style="background-color: var(--light-gray)">
           <p>Ties</p>
-          <span data-id="ties">0</span>
+          <span data-id="ties">0 Ties</span>
         </div>
         <div class="score shadow" style="background-color: var(--yellow)">
           <p>Player 2</p>
