--- a/live-react-refactor/public/index.html
+++ b/live-react-refactor/public/index.html
@@ -13,6 +13,6 @@
   <body>
     <div id="react-root"></div>
 
-    <script src="./bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
